--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantation Products</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Cab Booking</title>
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
 
@@ -13,39 +13,47 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="#">Book a Cab</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 </header>
 
-<!-- Sidebar -->
-<aside>
-    <h2>Categories</h2>
-    <ul>
-        <li><a href="#">Seeds</a></li>
-        <li><a href="#">Fertilizers</a></li>
-        <li><a href="#">Tools</a></li>
-        <!-- Add more categories as needed -->
-    </ul>
-</aside>
-
 <!-- Main Content -->
 <section id="main-content">
-    <div class="product">
-        <img src="seed.jpg" alt="Seed">
-        <h3>Plant Seeds</h3>
-        <p>High-quality seeds for a bountiful harvest...</p>
-        <button>Add to Cart</button>
-    </div>
+    <h1>Book a Cab</h1>
 
-    <!-- Add more product entries as needed -->
+    <!-- Search Form -->
+    <form id="booking-form">
+        <label for="pickup-location">Pickup Location:</label>
+        <input type="text" id="pickup-location" name="pickup-location" required>
+
+        <label for="drop-location">Drop Location:</label>
+        <input type="text" id="drop-location" name="drop-location" required>
+
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" required>
+
+        <button type="submit">Search for Cabs</button>
+    </form>
+
+    <!-- List of Available Cabs -->
+    <div id="cab-list">
+        <div class="cab">
+            <img src="cab1.jpg" alt="Cab 1">
+            <h3>Cab 1</h3>
+            <p>Comfortable and spacious sedan...</p>
+            <button onclick="bookCab(1)">Book Now</button>
+        </div>
+
+        <!-- Add more cab entries as needed -->
+    </div>
 </section>
 
 <!-- Footer -->
 <footer>
-    <p>&copy; 2023 Plantation Products</p>
+    <p>&copy; 2023 Cab Booking</p>
 </footer>
 
 <script src="scripts.js"></script>
